# weavehacks-3

./: .dockerignore  .env.example  .gitignore  QUICKSTART.md  README.md  README_SETUP.md  REDIS_TESTING.md  TESTING_GUIDE.md  bot.py  brain.py  example_rag_usage.py  main.py  pipecat_bot.py  pyproject.toml  requirements.txt  run_agent.sh  test_agent.py  testapi.py
app/: __init__.py  config.py  handlers.py  logging_utils.py  pipeline.py  processors.py  rag.py  services.py  ultravox_service.py  vision_hooks.py
src/raq/: api.py  brain.py  docker-compose.yml  ingest_to_redis.py  pipecat_bot.py
